add settings dto